--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -85,9 +85,9 @@ img {
 
 .text-box {
   background-color: white;
-  border: 2px solid $warmgray;
+  border-bottom: 2px solid $warmgray;
+  box-shadow: inset 0 1px 1px white, 0 0px 3px $warmgray;
   border-radius: 4px;
-  border-width: 2px 0 2px 0;
   margin-bottom: 1em;
   padding: 24px;
   position: relative;
